infrastructure/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: django-app
  name: django-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - name: django-app
        image: pybootcamp/django-app:v1
        imagePullPolicy: Always

        # uncomment to play with liveness probe
        # lifecycle:
        #     preStop:
        #       exec:
        #         command: ["sleep", "10"]

        # livenessProbe:
        #   httpGet:
        #     path: /healthz
        #     port: 8080
        #   initialDelaySeconds: 10
        #   periodSeconds: 20
        #   timeoutSeconds: 20
        #   failureThreshold: 5

        # readinessProbe:
        #   httpGet:
        #     path: /healthz
        #     port: 8080
        #   initialDelaySeconds: 10
        #   periodSeconds: 10
        #   timeoutSeconds: 10
        #   failureThreshold: 3

        ports:
          - containerPort: 8080
