infrastructure/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: django-app
  name: django-app
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: django-app
  type: ClusterIP
